--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite": "^2.8.0"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.4.0"
+    "@emailjs/browser": "^3.4.0",
+    "gsap": "^3.9.1"
   }
 }
