--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
-    "gsap": "^3.9.1"
+    "@types/underscore.string": "^0.0.38",
+    "gsap": "^3.9.1",
+    "underscore.string": "^3.3.6",
+    "vite-plugin-dynamic-import": "^0.1.1"
   }
 }
