--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
         "check": "svelte-check --tsconfig ./tsconfig.json"
     },
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-        "@tsconfig/svelte": "^2.0.1",
-        "@types/wavesurfer.js": "^6.0.3",
+        "@sveltejs/vite-plugin-svelte": "^2.0.2",
+        "@tsconfig/svelte": "^3.0.0",
         "@types/underscore.string": "^0.0.38",
-        "sass": "^1.49.9",
-        "svelte": "^3.44.0",
-        "svelte-check": "^2.2.7",
-        "svelte-preprocess": "^4.9.8",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.4",
-        "vite": "^2.8.0"
+        "@types/wavesurfer.js": "^6.0.3",
+        "sass": "^1.58.0",
+        "svelte": "^3.55.1",
+        "svelte-check": "^3.0.3",
+        "svelte-preprocess": "^5.0.1",
+        "tslib": "^2.5.0",
+        "typescript": "^4.9.5",
+        "vite": "^4.1.1"
     },
     "dependencies": {
-        "@emailjs/browser": "^3.4.0",
-        "bootstrap": "^5.1.3",
-        "bootstrap-icons": "^1.8.1",
-        "gsap": "^3.9.1",
-        "underscore": "^1.13.2",
+        "@emailjs/browser": "^3.10.0",
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
+        "gsap": "^3.11.4",
+        "underscore": "^1.13.6",
         "underscore.string": "^3.3.6",
-        "vite-plugin-dynamic-import": "^0.1.1",
-        "wavesurfer.js": "^6.1.0"
+        "vite-plugin-dynamic-import": "^1.2.7",
+        "wavesurfer.js": "^6.4.0"
     }
 }
